--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -6,5 +6,6 @@
 @media (max-width: 1200px) {
   .order-summary.affix {
     position: static;
+    width: 100%;
   }
 }
